references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/AttributeUsage_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:9a28f66e7e2984ceef7faf956fa9f2b4d599b306345604c967ed2626f707ffbb
size 2295
